--- a/app/index.html
+++ b/app/index.html
@@ -56,6 +56,7 @@
 <!-- build:js({.tmp,app}) scripts/scripts.js -->
 <script src="scripts/app.js"></script>
 <script src="scripts/controllers/cards.js"></script>
+<script src="scripts/controllers/decks.js"></script>
 <!-- endbuild -->
 </body>
 </html>
