--- a/app/index.html
+++ b/app/index.html
@@ -57,6 +57,7 @@
 <script src="scripts/app.js"></script>
 <script src="scripts/controllers/cards.js"></script>
 <script src="scripts/controllers/decks.js"></script>
+<script src="scripts/services/selected.js"></script>
 <!-- endbuild -->
 </body>
 </html>
