--- a/app/index.html
+++ b/app/index.html
@@ -58,6 +58,8 @@
 <script src="scripts/controllers/cards.js"></script>
 <script src="scripts/controllers/decks.js"></script>
 <script src="scripts/services/selected.js"></script>
+<script src="scripts/controllers/singledeck.js"></script>
+
 <!-- endbuild -->
 </body>
 </html>
